--- a/Days/Days/Interfaces/ToolViews/Keyboard/KeyboardInput.xib
+++ b/Days/Days/Interfaces/ToolViews/Keyboard/KeyboardInput.xib
@@ -15,10 +15,11 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="160"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="输入标题" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kao-pu-TeQ">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="800" verticalHuggingPriority="251" text="输入标题" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kao-pu-TeQ">
                     <rect key="frame" x="20" y="20" width="105" height="37"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="37" id="Blp-Nw-Ebk"/>
+                        <constraint firstAttribute="width" constant="105" id="fOp-BS-0UF"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="26"/>
                     <nil key="textColor"/>
@@ -68,27 +69,39 @@
                         <action selector="save:" destination="iN0-l3-epB" eventType="touchUpInside" id="wKb-Fk-pzK"/>
                     </connections>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="年份不能为 100" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ohp-dj-qkS">
+                    <rect key="frame" x="133" y="20" width="152" height="49"/>
+                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="16"/>
+                    <color key="textColor" red="1" green="0.38418834860000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="6sB-3b-0Tn" secondAttribute="trailing" constant="10" id="0QU-4N-H0c"/>
+                <constraint firstItem="Ohp-dj-qkS" firstAttribute="leading" secondItem="Kao-pu-TeQ" secondAttribute="trailing" constant="8" id="1hE-rx-Kab"/>
                 <constraint firstItem="Wcq-nj-JHb" firstAttribute="leading" secondItem="YnZ-oK-w8J" secondAttribute="trailing" constant="20" id="3XL-0T-ZHs"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Wcq-nj-JHb" secondAttribute="trailing" constant="10" id="AjV-CS-ZdC"/>
+                <constraint firstItem="YnZ-oK-w8J" firstAttribute="top" secondItem="Ohp-dj-qkS" secondAttribute="bottom" constant="8" id="MkQ-Gq-nkq"/>
                 <constraint firstItem="Kao-pu-TeQ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="WoO-6O-GQD"/>
+                <constraint firstItem="Ohp-dj-qkS" firstAttribute="top" secondItem="Kao-pu-TeQ" secondAttribute="top" id="azy-qR-rEA"/>
                 <constraint firstItem="YnZ-oK-w8J" firstAttribute="top" secondItem="Kao-pu-TeQ" secondAttribute="bottom" constant="20" id="bC9-6N-Kzc"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="YnZ-oK-w8J" secondAttribute="bottom" constant="20" id="bgG-Vw-sBd"/>
                 <constraint firstItem="Wcq-nj-JHb" firstAttribute="centerY" secondItem="YnZ-oK-w8J" secondAttribute="centerY" id="ci5-Pa-Aac"/>
                 <constraint firstItem="6sB-3b-0Tn" firstAttribute="centerY" secondItem="Kao-pu-TeQ" secondAttribute="centerY" id="e78-gG-GAx"/>
                 <constraint firstItem="YnZ-oK-w8J" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="skP-0k-Upq"/>
                 <constraint firstItem="Kao-pu-TeQ" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="20" id="veu-6a-BP6"/>
+                <constraint firstItem="Ohp-dj-qkS" firstAttribute="trailing" secondItem="YnZ-oK-w8J" secondAttribute="trailing" id="vv4-8H-Mua"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
+                <outlet property="error_label" destination="Ohp-dj-qkS" id="nhp-ZO-R32"/>
                 <outlet property="input" destination="36O-YV-3vX" id="qU5-YM-B3r"/>
                 <outlet property="title" destination="Kao-pu-TeQ" id="gg9-vW-qqY"/>
+                <outlet property="title_layout" destination="fOp-BS-0UF" id="HXt-hi-Hf5"/>
             </connections>
-            <point key="canvasLocation" x="-222.5" y="124.5"/>
+            <point key="canvasLocation" x="-222.5" y="124"/>
         </view>
     </objects>
     <resources>
