--- a/Days/Days/Interfaces/ToolViews/Cards/Chart/CardChartView.xib
+++ b/Days/Days/Interfaces/ToolViews/Cards/Chart/CardChartView.xib
@@ -12,13 +12,13 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CardChartView" customModule="Days" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="403"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="310"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="djR-GV-44q">
-                    <rect key="frame" x="20" y="90" width="335" height="253"/>
+                    <rect key="frame" x="20" y="90" width="335" height="160"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="b2C-za-WMR">
+                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="b2C-za-WMR">
                         <size key="itemSize" width="50" height="50"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -26,7 +26,7 @@
                     </collectionViewFlowLayout>
                 </collectionView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VdR-4B-DMG">
-                    <rect key="frame" x="0.0" y="343" width="375" height="60"/>
+                    <rect key="frame" x="0.0" y="250" width="375" height="60"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="alx-G1-Wup">
                             <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
@@ -122,13 +122,13 @@
                     </constraints>
                 </view>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_chart_goal" translatesAutoresizingMaskIntoConstraints="NO" id="3sc-4n-na6">
-                    <rect key="frame" x="0.0" y="196.5" width="375" height="40"/>
+                    <rect key="frame" x="0.0" y="150" width="375" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="dXw-Lg-g8y"/>
                     </constraints>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ErY-SR-9p9" customClass="View" customModule="Days" customModuleProvider="target">
-                    <rect key="frame" x="2" y="206" width="38.5" height="20"/>
+                    <rect key="frame" x="2" y="159.5" width="38.5" height="20"/>
                     <color key="backgroundColor" red="0.60784313729999995" green="0.60784313729999995" blue="0.60784313729999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="m0Q-J7-LVM"/>
@@ -140,7 +140,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aCG-BP-NMc">
-                    <rect key="frame" x="10" y="206" width="22.5" height="20"/>
+                    <rect key="frame" x="10" y="159.5" width="22.5" height="20"/>
                     <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
                     <color key="textColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
