--- a/Days/Days/Interfaces/ToolViews/Keyboard/KeyboardDateInput.xib
+++ b/Days/Days/Interfaces/ToolViews/Keyboard/KeyboardDateInput.xib
@@ -29,7 +29,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rj6-P8-yPZ" customClass="View" customModule="Days" customModuleProvider="target">
                     <rect key="frame" x="20" y="77" width="265" height="63"/>
                     <subviews>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="2018" textAlignment="center" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bYL-eF-6OC" customClass="DateTextView" customModule="Days" customModuleProvider="target">
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="2018" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="bYL-eF-6OC" customClass="DateTextView" customModule="Days" customModuleProvider="target">
                             <rect key="frame" x="10" y="10" width="91" height="43"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <color key="textColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
@@ -59,7 +59,7 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="12" textAlignment="center" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aDT-W9-pze" customClass="DateTextView" customModule="Days" customModuleProvider="target">
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="12" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="aDT-W9-pze" customClass="DateTextView" customModule="Days" customModuleProvider="target">
                             <rect key="frame" x="205" y="10" width="50" height="43"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <color key="textColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
@@ -77,7 +77,7 @@
                                 <outlet property="delegate" destination="v1V-pG-Ccq" id="fSW-ZY-ZDs"/>
                             </connections>
                         </textView>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="12" textAlignment="center" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Oar-Gc-Mcc" customClass="DateTextView" customModule="Days" customModuleProvider="target">
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="12" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Oar-Gc-Mcc" customClass="DateTextView" customModule="Days" customModuleProvider="target">
                             <rect key="frame" x="127.5" y="10" width="50.5" height="43"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <color key="textColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
@@ -138,7 +138,7 @@
                         <action selector="save:" destination="v1V-pG-Ccq" eventType="touchUpInside" id="plb-Jv-IuN"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="年份不能为 100" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d70-XV-1sQ">
+                <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="年份不能为 100" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d70-XV-1sQ">
                     <rect key="frame" x="133" y="20" width="152" height="49"/>
                     <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="16"/>
                     <color key="textColor" red="1" green="0.38418834860000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
