--- a/Days/Days/Interfaces/ToolViews/Keyboard/KeyboardDateInput.xib
+++ b/Days/Days/Interfaces/ToolViews/Keyboard/KeyboardDateInput.xib
@@ -140,6 +140,9 @@
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="年份不能为 100" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d70-XV-1sQ">
                     <rect key="frame" x="133" y="20" width="152" height="49"/>
+                    <constraints>
+                        <constraint firstAttribute="width" relation="greaterThanOrEqual" id="dJS-LO-sPF"/>
+                    </constraints>
                     <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="16"/>
                     <color key="textColor" red="1" green="0.38418834860000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <nil key="highlightedColor"/>
@@ -158,7 +161,7 @@
                 <constraint firstItem="vyH-c4-MN0" firstAttribute="trailing" secondItem="1zr-Re-jqH" secondAttribute="trailing" constant="10" id="c7h-6P-Nyi"/>
                 <constraint firstItem="vyH-c4-MN0" firstAttribute="bottom" secondItem="Rj6-P8-yPZ" secondAttribute="bottom" constant="20" id="egw-Cy-8mC"/>
                 <constraint firstItem="Rj6-P8-yPZ" firstAttribute="leading" secondItem="vyH-c4-MN0" secondAttribute="leading" constant="20" id="fJJ-nw-12V"/>
-                <constraint firstItem="d70-XV-1sQ" firstAttribute="trailing" secondItem="Rj6-P8-yPZ" secondAttribute="trailing" id="gBh-Pk-9gc"/>
+                <constraint firstItem="d70-XV-1sQ" firstAttribute="trailing" secondItem="Rj6-P8-yPZ" secondAttribute="trailing" priority="900" id="gBh-Pk-9gc"/>
                 <constraint firstItem="d70-XV-1sQ" firstAttribute="top" secondItem="jfy-IA-YfE" secondAttribute="top" id="hXg-4m-6KY"/>
                 <constraint firstItem="Rj6-P8-yPZ" firstAttribute="top" secondItem="d70-XV-1sQ" secondAttribute="bottom" constant="8" id="ltc-WV-h0u"/>
             </constraints>
