--- a/Days/Days/Interfaces/ToolViews/Keyboard/KeyboardInput.xib
+++ b/Days/Days/Interfaces/ToolViews/Keyboard/KeyboardInput.xib
@@ -26,10 +26,10 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YnZ-oK-w8J" customClass="View" customModule="Days" customModuleProvider="target">
-                    <rect key="frame" x="20" y="77" width="265" height="63"/>
+                    <rect key="frame" x="20" y="77" width="275" height="63"/>
                     <subviews>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="36O-YV-3vX">
-                            <rect key="frame" x="10" y="10" width="245" height="43"/>
+                            <rect key="frame" x="10" y="10" width="255" height="43"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <color key="textColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
                             <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="20"/>
@@ -70,7 +70,10 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="年份不能为 100" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ohp-dj-qkS">
-                    <rect key="frame" x="133" y="20" width="152" height="49"/>
+                    <rect key="frame" x="133" y="20" width="162" height="49"/>
+                    <constraints>
+                        <constraint firstAttribute="width" relation="greaterThanOrEqual" id="7oN-xV-p9w"/>
+                    </constraints>
                     <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="16"/>
                     <color key="textColor" red="1" green="0.38418834860000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <nil key="highlightedColor"/>
@@ -80,7 +83,7 @@
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="6sB-3b-0Tn" secondAttribute="trailing" constant="10" id="0QU-4N-H0c"/>
                 <constraint firstItem="Ohp-dj-qkS" firstAttribute="leading" secondItem="Kao-pu-TeQ" secondAttribute="trailing" constant="8" id="1hE-rx-Kab"/>
-                <constraint firstItem="Wcq-nj-JHb" firstAttribute="leading" secondItem="YnZ-oK-w8J" secondAttribute="trailing" constant="20" id="3XL-0T-ZHs"/>
+                <constraint firstItem="Wcq-nj-JHb" firstAttribute="leading" secondItem="YnZ-oK-w8J" secondAttribute="trailing" constant="10" id="3XL-0T-ZHs"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Wcq-nj-JHb" secondAttribute="trailing" constant="10" id="AjV-CS-ZdC"/>
                 <constraint firstItem="YnZ-oK-w8J" firstAttribute="top" secondItem="Ohp-dj-qkS" secondAttribute="bottom" constant="8" id="MkQ-Gq-nkq"/>
                 <constraint firstItem="Kao-pu-TeQ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="WoO-6O-GQD"/>
@@ -91,7 +94,7 @@
                 <constraint firstItem="6sB-3b-0Tn" firstAttribute="centerY" secondItem="Kao-pu-TeQ" secondAttribute="centerY" id="e78-gG-GAx"/>
                 <constraint firstItem="YnZ-oK-w8J" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="skP-0k-Upq"/>
                 <constraint firstItem="Kao-pu-TeQ" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="20" id="veu-6a-BP6"/>
-                <constraint firstItem="Ohp-dj-qkS" firstAttribute="trailing" secondItem="YnZ-oK-w8J" secondAttribute="trailing" id="vv4-8H-Mua"/>
+                <constraint firstItem="Ohp-dj-qkS" firstAttribute="trailing" secondItem="YnZ-oK-w8J" secondAttribute="trailing" priority="900" id="vv4-8H-Mua"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
