--- a/Days/Days/Interfaces/ToolViews/Keyboard/KeyboardInput.xib
+++ b/Days/Days/Interfaces/ToolViews/Keyboard/KeyboardInput.xib
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="160"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="800" verticalHuggingPriority="251" text="输入标题" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kao-pu-TeQ">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="800" verticalHuggingPriority="251" text="输入标题" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kao-pu-TeQ">
                     <rect key="frame" x="20" y="20" width="105" height="37"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="37" id="Blp-Nw-Ebk"/>
@@ -53,7 +53,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6sB-3b-0Tn">
-                    <rect key="frame" x="305" y="8" width="60" height="60"/>
+                    <rect key="frame" x="305" y="8.5" width="60" height="60"/>
                     <state key="normal" image="but_error"/>
                     <connections>
                         <action selector="close:" destination="iN0-l3-epB" eventType="touchUpInside" id="CNJ-F2-Tce"/>
@@ -105,7 +105,7 @@
                 <outlet property="title_layout" destination="fOp-BS-0UF" id="HXt-hi-Hf5"/>
                 <outlet property="title_width" destination="fOp-BS-0UF" id="iMJ-cr-YAK"/>
             </connections>
-            <point key="canvasLocation" x="-222.5" y="124"/>
+            <point key="canvasLocation" x="-451.5" y="-21"/>
         </view>
     </objects>
     <resources>
